--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   "author": "Vandium Software Inc.",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "aws-sdk": "^2.107.0"
   },
   "devDependencies": {
+    "aws-sdk": "^2.107.0",
     "chai": "^4.1.2",
     "istanbul": "^0.4.5",
     "mocha": "^3.5.0",
+    "proxyquire": "^1.8.0",
     "sinon": "^3.2.1"
   }
 }
