--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ coverage
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
+.nyc_output
+
 # node-waf configuration
 .lock-wscript
 
