--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-param-store",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Library for loading parameters from AWS Parameter Store",
   "keywords": [
     "AWS",
@@ -12,8 +12,17 @@
   ],
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha --recursive",
-    "coverage": "./node_modules/.bin/istanbul cover _mocha -- -R spec --recursive"
+    "test": "nyc mocha --recursive"
+  },
+  "nyc": {
+    "check-coverage": true,
+    "include": [
+      "lib/**/*.js"
+    ],
+    "reporter": [
+      "lcov",
+      "text"
+    ]
   },
   "repository": {
     "type": "git",
@@ -29,8 +38,9 @@
   "devDependencies": {
     "aws-sdk": "^2.107.0",
     "chai": "^4.1.2",
-    "istanbul": "^0.4.5",
     "proxyquire": "^1.8.0",
-    "sinon": "^3.2.1"
+    "mocha": "^4.0.1",
+    "nyc": "^11.3.0",
+    "sinon": "^4.0.0"
   }
 }
