--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-param-store",
-  "version": "1.1.0",
+  "version": "2.0.0-beta",
   "description": "Library for loading parameters from AWS Parameter Store",
   "keywords": [
     "AWS",
@@ -15,7 +15,7 @@
     "test": "nyc mocha --recursive"
   },
   "nyc": {
-    "check-coverage": true,
+    "check-coverage": false,
     "include": [
       "lib/**/*.js"
     ],
