--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-param-store",
-  "version": "2.0.0-beta",
+  "version": "2.0.0",
   "description": "Library for loading parameters from AWS Parameter Store",
   "keywords": [
     "AWS",
