--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   ],
   "main": "lib/index.js",
   "scripts": {
+    "build": "babel src --out-dir lib",
     "test": "nyc mocha --recursive"
   },
   "nyc": {
@@ -33,14 +34,16 @@
   },
   "author": "Vandium Software Inc.",
   "license": "BSD-3-Clause",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "aws-sdk": "^2.107.0",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.3",
+    "babel-preset-env": "1.7.0",
     "chai": "^4.1.2",
-    "proxyquire": "^1.8.0",
     "mocha": "^4.0.1",
     "nyc": "^11.3.0",
+    "proxyquire": "^1.8.0",
     "sinon": "^4.0.0"
   }
 }
