--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-param-store",
-  "version": "2.1.0",
+  "version": "3.0.0",
   "description": "Library for loading parameters from AWS Parameter Store",
   "keywords": [
     "AWS",
@@ -29,18 +29,17 @@
     "url": "https://github.com/vandium-io/aws-param-store.git"
   },
   "engines": {
-    "node": ">=6.10"
+    "node": ">=8.10"
   },
   "author": "Vandium Software Inc.",
   "license": "BSD-3-Clause",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "aws-sdk": "^2.325.0",
     "chai": "^4.1.2",
     "proxyquire": "^2.1.0",
-    "mocha": "^5.2.0",
-    "nyc": "^13.1.0",
-    "sinon": "^6.3.4"
+    "mocha": "^6.1.4",
+    "nyc": "^14.1.1",
+    "sinon": "^7.3.2"
   }
 }
