--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-param-store",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "description": "Library for loading parameters from AWS Parameter Store",
   "keywords": [
     "AWS",
@@ -34,12 +34,15 @@
   "author": "Vandium Software Inc.",
   "license": "BSD-3-Clause",
   "dependencies": {},
+  "peerDependencies": {
+    "aws-sdk": "^2.553.0"
+  },
   "devDependencies": {
-    "aws-sdk": "^2.325.0",
+    "aws-sdk": "^2.563.0",
     "chai": "^4.1.2",
-    "proxyquire": "^2.1.0",
-    "mocha": "^6.1.4",
+    "mocha": "^6.2.2",
     "nyc": "^14.1.1",
-    "sinon": "^7.3.2"
+    "proxyquire": "^2.1.3",
+    "sinon": "^7.5.0"
   }
 }
