--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-param-store",
-  "version": "3.1.0",
+  "version": "3.2.0",
   "description": "Library for loading parameters from AWS Parameter Store",
   "keywords": [
     "AWS",
@@ -35,10 +35,10 @@
   "license": "BSD-3-Clause",
   "dependencies": {},
   "peerDependencies": {
-    "aws-sdk": "^2.553.0"
+    "aws-sdk": "*"
   },
   "devDependencies": {
-    "aws-sdk": "^2.563.0",
+    "aws-sdk": "^2.584.0",
     "chai": "^4.1.2",
     "mocha": "^6.2.2",
     "nyc": "^14.1.1",
