--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aws-param-store",
-  "version": "3.2.0",
-  "description": "Library for loading parameters from AWS Parameter Store",
+  "version": "4.0.0-Beta1",
+  "description": "Library for loading parameters from AWS SSM Parameter Store",
   "keywords": [
     "AWS",
     "SSM",
@@ -12,7 +12,8 @@
   ],
   "main": "lib/index.js",
   "scripts": {
-    "test": "nyc mocha --recursive"
+    "test": "nyc mocha './lib/**/__tests__/*' --recursive",
+    "lint": "eslint lib/*"
   },
   "nyc": {
     "check-coverage": true,
@@ -28,21 +29,28 @@
     "type": "git",
     "url": "https://github.com/vandium-io/aws-param-store.git"
   },
+  "files": [
+    "/lib"
+  ],
   "engines": {
-    "node": ">=8.10"
+    "node": ">=12"
   },
   "author": "Vandium Software Inc.",
   "license": "BSD-3-Clause",
-  "dependencies": {},
+  "dependencies": {
+    "sync-rpc": "^1.3.6"
+  },
   "peerDependencies": {
     "aws-sdk": "*"
   },
   "devDependencies": {
-    "aws-sdk": "^2.584.0",
+    "aws-sdk": "^2.610.0",
     "chai": "^4.1.2",
-    "mocha": "^6.2.2",
-    "nyc": "^14.1.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-mocha": "^6.2.2",
+    "mocha": "^7.0.0",
+    "nyc": "^15.0.0",
     "proxyquire": "^2.1.3",
-    "sinon": "^7.5.0"
+    "sinon": "^8.1.1"
   }
 }
