--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "eslint-plugin-mocha": "^6.2.2",
     "mocha": "^7.0.0",
     "nyc": "^15.0.0",
-    "proxyquire": "^2.1.3",
+    "rewiremock": "^3.13.9",
     "sinon": "^8.1.1"
   }
 }
